# EUI-NEO

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  main.cpp
.github/workflows/: pages.yml  release.yml
3rd/: EuiThirdParty.cmake  FindPNG.cmake  FindZLIB.cmake  dependencies.cmake
3rd/freetype/: CMakeLists.txt
3rd/libpng-1.6.43/: CMakeLists.txt
app/: gallery.cpp
apps/masonry_browser/: app.cpp
components/: button.h  card.h  carousel.h  colorpicker.h  components.h  contextmenu.h  datepicker.h  dialog.h  input.h  input_model.h  layout_debug.h  markdown.h  mousearea.h  piechart.h  scroll.h  scrollview.h  timepicker.h
components/workshop/: SKILL.md  card_slider.h  heart_switch.h  neumorphic_button.h  tilt_card.h
core/: animation.h  dsl.h  dsl_runtime.h  event.h  image.cpp  image.h  layout.h  network.cpp  network.h  primitive.h  text.cpp  text.h  tray_bridge.c
core/app/: app_runner.h  dsl_window_manager.h  dsl_window_runtime.h  glfw_app_main.cpp  main_window_runtime.h  sdl2_app_main.cpp
core/input/: input_state.h
core/platform/: network.cpp  performance_stats.cpp  performance_stats.h
core/render/: image.h  image_facade.cpp  image_source.cpp  image_source.h  primitive.cpp  primitive_geometry.h  render_types.h  text.cpp
core/render/opengl/: opengl_backend.cpp  opengl_backend.h  opengl_image.cpp  opengl_primitives.cpp  opengl_text.cpp
core/render/vulkan/: vulkan_primitives.cpp  vulkan_rounded_rect_shaders.h
core/render/vulkan/shaders/: rounded_rect.frag
core/runtime/: runtime_animation.h  runtime_dirty.h  runtime_geometry.h  runtime_hit_test.h  runtime_input.h  runtime_instances.h  runtime_lifecycle.h  runtime_render.h  runtime_render_helpers.h  runtime_state_bindings.h  runtime_tree.h  runtime_update.h
docs/: DSL.md  SKILL.md  Slint渲染与优化对比.md  modules.md  retained_layer_cache.md  事件.md  动画.md  图片.md  基础图元文本图元.md  布局.md  开发与发布.md  模块.md  渲染后端架构.md  渲染流程.md  状态.md  稳定版路线图.md  窗口页面.md  组件.md  网络.md  集成指南.md
examples/: calculator.cpp  card_slider.cpp  chat.cpp  gallery.cpp  keyboard.cpp
examples/pages/: gallery_controls.h  gallery_style.h
include/: eui_neo.h
include/eui/: dsl.h  dsl_app.h  image.h
include/eui/detail/: dsl_app_impl.h
modules/: CMakeLists.txt  README.md
modules/keyboard/: CMakeLists.txt  README.md  keyboard.h
modules/media/: CMakeLists.txt  README.md
modules/serial/: CMakeLists.txt  README.md
site/: app.js  styles.css
tests/docs/: 内存占用对比.md
tests/fixtures/: dirty_repaint_complexity_viewer.cpp  layout_regression_viewer.cpp  loader_lifecycle_viewer.cpp  markdown_viewer.cpp  text_alignment_viewer.cpp
tests/probes/: dxgi_dirty_present_probe.cpp  dxgi_present_bridge_probe.cpp
tests/unit/: dsl_app_config.cpp  image_theme_color.cpp  keyboard_module.cpp  ui_state.cpp
